added username to the screen

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,7 +1,7 @@
 <h1>Account</h1>
 
 {{#if user}}
-Account for: <strong> {{user.name}} @{{user.username}}</strong>
+<i>Account for: </i> {{user.displayName}} <strong> @{{user.username}}</strong>
 <div>   
     <a href="/logout">Logout</a>
 </div>
