--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,15 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+table, th, td {
+    width: max-content;
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 1em;
+
+}
+
+div {
+    margin: 1em;
+}
